--- a/Портфолио.md
+++ b/Портфолио.md
@@ -26,6 +26,7 @@
 - Git
 - ruff, black, flake8
 - git hooks
+- Компьютерные сети - http, DNS, TCP/IP
   
 ## Опыт работы
 ## Автоматизированное тестирование на Python, VK, стажировка 6 месяцев (.08.2023 - .02.2024)
