--- a/Портфолио.md
+++ b/Портфолио.md
@@ -1,6 +1,7 @@
 ## О себе
 Меня зовут Никита. Родился в 2004г. Сейчас учусь на 2 курсе на специальности 'Инженер по машинному обучению'. В свободное время читаю книги - художественные и технические.
-Каждый день пишу код, так как это мое основное увлечение. Каждый день делаю все возможное, чтобы улучшить свои навыки. 
+Каждый день пишу код, так как это мое основное и любимое увлечение. 
+**Новый день - новая возможность узнать что-то новое!**
 ## Стэк технологий (по убыванию владения)
 **Языки:**
 - Python
@@ -27,6 +28,7 @@
 - ruff, black, flake8
 - git hooks
 - Компьютерные сети - http, DNS, TCP/IP
+- Алгоритмы и структуры данных
   
 ## Опыт работы
 ## Автоматизированное тестирование на Python, VK, стажировка 6 месяцев (.08.2023 - .02.2024)
